<resources>
    <string name="app_name">Lapak Santri</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">Logo</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="email_address">Alamat Email</string>
    <string name="register">Daftar</string>
    <string name="already_have_an_account">Sudah punya akun?</string>
    <string name="login">Masuk</string>
    <string name="dont_have_an_account_yet">Belum punya akun?</string>
    <string name="password">Kata Sandi</string>
    <string name="loading">Memuat</string>
    <string name="image">Image</string>
    <string name="cart">Keranjang</string>
    <string name="new_information">Informasi Terbaru</string>
    <string name="author_date">Oleh %1$s - %2$s</string>
    <string name="calendar">Calendar</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="order">Order</string>
    <string name="logout">Keluar</string>
    <string name="is_you_want_to_logout">Apakah Anda Ingin Keluar</string>
    <string name="no">Tidak</string>
    <string name="yes">Ya</string>
    <string name="line">Garis</string>
    <string name="add_to_cart">Tambah Ke Keranjang</string>
    <string name="varian_product">Varian Produk</string>
    <string name="danger">Danger</string>
    <string name="minimum_order">Pembelian Air Santri Minimal 5 item</string>
    <string name="plus">Plus</string>
    <string name="minus">Minus</string>
    <string name="out_of_stock">Stok Habis</string>
    <string name="unit_name">/ %s</string>
    <string name="total_pay">Total Bayar</string>
    <string name="shipping">Pengiriman</string>
    <string name="total">Total</string>
    <string name="subtotal">Subtotal</string>
    <string name="next">Next</string>
    <string name="address">Alamat</string>
    <string name="choose_address">Pilih Alamat</string>
    <string name="confirmation_order">Konfirmasi Order</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="your_cart_empty">Keranjang Anda Kosong</string>
    <string name="pilih_produk_sekarang">Pilih Produk Sekarang</string>
    <string name="address_type">%1$s - %2$s</string>
    <string name="choose_shipping_address">Pilih Alamat Pengiriman</string>
    <string name="edit">Ubah</string>
    <string name="add_address">Tambah Alamat</string>
    <string name="shimmer">shimmer</string>
    <string name="delete_address">Hapus Alamat</string>
    <string name="save_address">Simpan Alamat</string>
    <string name="set_main_address">Atur Sebagai Alamat Utama</string>
    <string name="area">Rumah Kantor lainnya</string>
    <string name="tandai_sebagai">Tandai Sebagai</string>
    <string name="phone_number">No Telepon</string>
    <string name="recipient">Nama Penerima</string>
    <string name="detail_address">Alamat Lengkap</string>
    <string name="village">Kelurahan</string>
    <string name="input_shipping_address">Masukan Alamat Pengiriman</string>
    <string name="district">Kecamatan</string>
    <string name="status_order">"Status Order "</string>
    <string name="unpaid">Belum Dibayar</string>
    <string name="invoice">Invoice : %s</string>
    <string name="order_date">Tanggal Order : %s</string>
    <string name="shipping_date">Tanggal Pengiriman : %s</string>
    <string name="pay_now">Bayar Sekarang</string>
    <string name="detail_order">Detail Order</string>
    <string name="already_paid">Sudah Dibayar</string>
    <string name="history_order">Riwayat Pesanan</string>
    <string name="order_failed">Order Gagal</string>
</resources>