<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_9sdp"
    android:elevation="0dp"
    tools:context=".presentation.auth.logout.LogoutFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.auth.logout.LogoutFragment">

        <TextView
            android:id="@+id/textView36"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_13sdp"
            android:text="@string/logout"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_27sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_27sdp"
            android:fontFamily="@font/poppins"
            android:text="@string/is_you_want_to_logout"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView36" />

        <Button
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_13sdp"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            android:fontFamily="@font/poppins"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@color/primary_green"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toStartOf="@+id/btnYes"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView37" />

        <Button
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@color/primary_green"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btnNo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnNo"
            app:layout_constraintTop_toTopOf="@+id/btnNo" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            android:src="@drawable/line"
            app:layout_constraintBottom_toTopOf="@+id/btnNo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/line" />

        <ImageView
            android:layout_width="@dimen/_1sdp"
            android:layout_height="0dp"
            android:src="@drawable/line"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnNo"
            app:layout_constraintStart_toEndOf="@+id/btnNo"
            app:layout_constraintTop_toTopOf="@+id/btnYes"
            android:contentDescription="@string/line" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
